# seikatsu-logger

./: .gitignore  LICENSE  README.md  config.json  database.py  main.py  pyproject.toml  requirements.txt  utils.py
lang/: en_UK.json  uk_UA.json
libs/components/: Back.py  BasePage.py  NavigationComp.py  TypewriterText.py  navigation.py
libs/pages/: base_page.py  chart_page.py  chat_page.py  edit_page.py  home_page.py  note_page.py  record_page.py  settings_page.py  todo_page.py  write_page.py
logs/: 2024-10-27.json  2024-10-28.json  2024-10-29.json  2024-10-31.json
